# invoicr

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  provider.example.json  vitest.config.ts
.github/workflows/: release.yml
examples/: acme-daily.json  acme-detailed.json  acme-fixed.json  acme-hourly.json  acme-minimal.json  acme-multiservice.json  acme-romania.json  acme-xrechnung.json  bulk-config.json
gui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.tsx  index_2_backup.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/deb/: invoicr.desktop
gui/src-tauri/src/: main.rs
scripts/: create-templates.ts  postinstall.js
src/: create-client.ts  document.ts  email.ts  history.ts  invoice-utils.ts  invoice.ts  types.ts  utils.ts
src/api/: index.ts  server.ts  types.ts
src/commands/: bulk-utils.ts  bulk.ts  clone-client.ts  einvoice.ts  export-utils.ts  export.ts  gui.ts  init.ts  list-utils.ts  list.ts
src/data/: countries.ts
src/einvoice/: formats.ts  generator.ts  (+3 more)
templates/: default.docx  detailed.docx  minimal.docx
tests/: bulk-utils.test.ts  commands-einvoice.test.ts  einvoice-formats.test.ts  einvoice-generator.test.ts  einvoice-mapper.test.ts  einvoice-validator.test.ts  email.test.ts  export-utils.test.ts  history.test.ts  invoice-utils.test.ts  lib-config-manager.test.ts  lib-document-generator.test.ts  lib-history-manager.test.ts  lib-invoice-builder.test.ts  list-utils.test.ts  schemas.test.ts  templates.test.ts  utils.test.ts
(+199 files in other folders)
