[package]
name = "invoicr-gui"
version = "1.0.0"
description = "Desktop GUI for Invoicr - Invoice generation tool"
authors = ["LeanerCloud"]
license = "MIT"
repository = "https://github.com/LeanerCloud/invoicr"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "path-all", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
