[package]
name = "invoicr-gui"
version = "1.0.0"
description = "Desktop GUI for Invoicr - Invoice generation tool"
authors = ["LeanerCloud"]
license = "MIT"
repository = "https://github.com/LeanerCloud/invoicr"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
